syntax = "proto3";

package dem;

option go_package = "demMN";

message File {
    string id=1;
    string user_id=2;
    string folder_id=3;
    string name=4;
    string description=5;
    string created_date=6;
    string updated_date=7;
    string file_hash=8;
    bool is_buried=9;
    bool is_folder_file=10;
    bool is_starred=11;
    bool is_trash=12;
    bool is_deleted=13;
}
message Chunk {
    bytes Content = 1;
}
message HelloRequest {
    string message = 1;
}
  
message HelloResponse {
    string message = 1;
}

message UploadFileRequest {
    Chunk file=1;
}
message UploadFileResponse {
    string result = 1;
}
message LongGreetRequest {
    Chunk  greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}
service DemMNService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
    // BiDi Streaming
    rpc UploadFile(stream UploadFileRequest) returns (stream UploadFileResponse) {};
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
}